Fix spacing for previewed images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,12 +144,13 @@ header img {
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-  padding: 1rem;
+  padding: 3rem;
   cursor: pointer;
 }
 
 .image-preview > img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .image-preview.active {
